test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/empty_initializer_list.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(1)
  ]
  =
  {
  }
  ;
  return
  const int(0)
  ;
  }
